--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
     <body>
         
+        <div id= "header">
+            <h1>Selectors</h1>
+            <h2>In CSS</h2>
+            <p>Welcome to the website!</p>
+        </div>
+
+        <p>Hello there ninjas!</p>
+        
     </body>
 
 </html>
