--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,14 @@
         </div>
 
         <p>Hello there ninjas! contact us below.</p>
-        <p>Hello there ninjas! contact us below.</p>
-        <p>Hello there ninjas! contact us below.</p>
-        <p>Hello there ninjas! contact us below.</p>
-        <p>Hello there ninjas! contact us below.</p>
-        <p>Hello there ninjas! contact us below.</p>
+        <p>Aren't paragraph's cool?</p>
+
+        <a href="http://www.google.com">Google</a>
+        <span>Yo, I'm a span tag</span>
+
+
         
+       
     </body>
 
 </html>
