--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
     <head>
 
-        <meta charset="UTF-8">
         <title>CSS for Beginners</title>
+        <link rel="stylesheet" type="text/css" href="css/syntax.css">
 
     </head>
 
     <body>
+
+        <p class="welcome">Welcome!</p>
         
         <div id= "header">
             <h1>Selectors</h1>
@@ -16,6 +18,13 @@
             <p>Welcome to the website!</p>
         </div>
 
+        <p>Hello there ninjas!</p>
+        <p>Hello there ninjas!</p>
+        <p>Hello there ninjas!</p>
+        <p>Hello there ninjas!</p>
+        <p>Hello there ninjas!</p>
+        <p>Hello there ninjas!</p>
+        <p>Hello there ninjas!</p>
         <p>Hello there ninjas!</p>
         
     </body>
