--- a/contact.html
+++ b/contact.html
@@ -12,17 +12,23 @@
 
         <div id= "header">
             <h1>Contact Us</h1>
+            <h2>Contact The Net Ninja!?!?!</h2>
         </div>
+
+        <h2 id="content-header">Content</h2>
 
         <p>Hello there ninjas! contact us below.</p>
         <p>Aren't paragraph's cool?</p>
 
         <a href="http://www.google.com">Google</a>
+
         <span>Yo, I'm a span tag</span>
 
+        <span class="deck">Yo, I'm span tag too</span>
+        <span class="deck">This is a deck of spans</span>
+        <span class="deck">I like span decks</span>
 
-        
-       
+
     </body>
 
 </html>
