color attributes removed and div tags and link added into contact.html

--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,6 @@
 
         <title>CSS for Beginners</title>
         <link rel="stylesheet" type="text/css" href="css/syntax.css">
-        <style>
-            span{
-                color: purple;
-            }
-        </style>
 
     </head>
 
@@ -21,17 +16,18 @@
         </div>
 
         <h2 id="content-header">Content</h2>
+        
+        <div>
+            <p>Hello there ninjas! contact us below.</p>
+            <p>Aren't paragraph's cool?</p>
+        </div>
 
-        <p>Hello there ninjas! contact us below.</p>
-        <p>Aren't paragraph's cool?</p>
-
-        <a href="http://www.google.com">Google</a>
-
-        <span style="color: green;">Yo, I'm a span tag</span>
-
+        <span>Yo, I'm a span tag</span>
         <span class="deck">Yo, I'm span tag too</span>
         <span class="deck">This is a deck of spans</span>
         <span class="deck">I like span decks</span>
+
+        <a href="#">I'm a spanner</a>
 
 
     </body>
