--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         
         <div id="main-content">
             <p>Hello there <strong>ninjas!</strong> contact us below.</p>
-            <p class="test">Aren't paragraph's cool?</p>
+            <p>Aren't paragraph's cool?</p>
         </div>
 
         <p>None contained P tag</p>
