--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,11 @@
         <div id="main-content">
             <p>Hello there <strong>ninjas!</strong> contact us below.</p>
             <p>Aren't paragraph's cool?</p>
+
+            <div id="sub-content">
+                <p>More content</p>
+            </div>
+            
         </div>
 
         <p>None contained P tag</p>
