--- a/articles.html
+++ b/articles.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html>
+
+    <head>
+
+        <title>CSS for Beginners</title>
+        <link rel="stylesheet" type="text/css" href="css/syntax.css">
+
+    </head>
+
+    <body>
+        <div id="header">
+            <h1>Articles</h1>
+        </div>
+
+        <div id="all-articles">
+
+            <h2>Article #1</h2>
+            <p>Published by the Net Ninja</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+
+            <h2>Article #2</h2>
+            <p>Published by the Net Ninja</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+
+            <h2>Article #3</h2>
+            <p>Published by the Net Ninja</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+            <p>blah blah blah</p>
+
+        </div>
+        
+    </body>
+
 </html>
