Useless sign removed from some paragraphs in articles.html

--- a/articles.html
+++ b/articles.html
@@ -15,19 +15,19 @@
     <article>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
             dolorem veniam iste, libero pariatur. Odio sint iure eligendi quaerat eius recusandae excepturi nam!</p>
-        <p>>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
             dolorem veniam iste, libero pariatur. Odio sint iure eligendi quaerat eius recusandae excepturi nam!</p>
-        <p>>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
             dolorem veniam iste, libero pariatur. Odio sint iure eligendi quaerat eius recusandae excepturi nam!</p>
         <p>To read more click <a href="#">here</a></p>
-        </article>
+    </article>
 
     <article>
-        <p>>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
             dolorem veniam iste, libero pariatur. Odio sint iure eligendi quaerat eius recusandae excepturi nam!</p>
-        <p>>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
             dolorem veniam iste, libero pariatur. Odio sint iure eligendi quaerat eius recusandae excepturi nam!</p>
-        <p>>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
             dolorem veniam iste, libero pariatur. Odio sint iure eligendi quaerat eius recusandae excepturi nam!</p>
         <p>To read more click <a href="#">here</a></p>
     </article>
