two h2 tags and hr tag added to article.html

--- a/articles.html
+++ b/articles.html
@@ -13,6 +13,7 @@
     <h2>Most Recent Articles</h2>
 
     <article>
+        <h2>Article Title</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
             dolorem veniam iste, libero pariatur. Odio sint iure eligendi quaerat eius recusandae excepturi nam!</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
@@ -20,9 +21,11 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
             dolorem veniam iste, libero pariatur. Odio sint iure eligendi quaerat eius recusandae excepturi nam!</p>
         <p>To read more click <a href="#">here</a></p>
+        <hr>
     </article>
 
     <article>
+        <h2>Article 2 Title</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
             dolorem veniam iste, libero pariatur. Odio sint iure eligendi quaerat eius recusandae excepturi nam!</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptatem a. Esse expedita quod maiores sint
