one article tag within p tag added to lists.html

--- a/lists.html
+++ b/lists.html
@@ -16,14 +16,18 @@
                 <p>dummy text</p>
             </article>
 
-            <div class=""featured-content>
+            <article>
+                <p>dummy text</p>
+            </article>
+
+            <div class="featured-content">
                 <img src="#">
             </div>
 
             <div>
                 <img src="#">
             </div>
-            
+
         </div>
         
 
