--- a/lists.html
+++ b/lists.html
@@ -9,9 +9,26 @@
     </head>
         
     <body>
+        <h1>I am a heading</h1>
 
+        <article>
+            <p>blah blah blah</p>
+            <p>blah blah blah <a href="#">link</a></p>
+        </article>
+
+        <ul>
+            <li>list item</li>
+            <li>list item</li>
+        </ul>
+
+        <h2>New section</h2>
+
+        <p>blah blah blah</p>
+        <p>blah blah blah</p>
+        <p>blah blah blah</p>
+        <p>Getting tired of writing blah blah blah</p>
+        <p>I am a fish</p>
         
-
     </body>
 
 </html>
