Added <style> within some properties for <body> and #main-content in the <head> of document in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
         <title>CSS for Beginners</title>
         <link rel="stylesheet" type="text/css" href="css/syntax.css">
 
+        <style>
+
+            body{
+                background: #eee;
+            }
+
+            #main-content{
+                background: #fff;
+                width: 1200px;
+                margin: 0 auto;
+                padding: 20px;
+            }
+            
+        </style>
+
     </head>
 
     <body>
