Added #main-content and header within in index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     </head>
 
     <body>
+        <div id="main-content">
+
+            <h1>CSS For Beginners</h1>
+
+        </div>
 
         
     </body>
