Added 3 paragraphs in #main-content in index.html

--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
+<head>
 
-        <title>CSS for Beginners</title>
-        <link rel="stylesheet" type="text/css" href="css/syntax.css">
+    <title>CSS for Beginners</title>
+    <link rel="stylesheet" type="text/css" href="css/syntax.css">
 
-        <style>
+    <style>
+        body {
+            background: #eee;
+        }
 
-            body{
-                background: #eee;
-            }
+        #main-content {
+            background: #fff;
+            width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+    </style>
 
-            #main-content{
-                background: #fff;
-                width: 1200px;
-                margin: 0 auto;
-                padding: 20px;
-            }
+</head>
 
-        </style>
+<body>
+    <div id="main-content">
 
-    </head>
+        <h1>CSS For Beginners</h1>
 
-    <body>
-        <div id="main-content">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et magni incidunt, tempora, quo rerum reiciendis
+            voluptatum aliquid voluptate quia dolorem eveniet iusto quibusdam excepturi, aliquam quam tenetur sequi
+            itaque amet!</p>
 
-            <h1>CSS For Beginners</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum odit dolorum voluptate deleniti tempora, fugiat
+            magnam doloribus ab laborum nisi officiis excepturi, quos tempore inventore, dolores doloremque ullam hic
+            vel.</p>
 
-        </div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, sint voluptas non, veniam nam maxime
+            facilis autem iusto magni dolorum minima, debitis eos voluptates et? Natus eum perspiciatis rem distinctio?
+        </p>
 
-        
-    </body>
+    </div>
+
+</body>
 
 </html>
