Added .small into div tag in #main-content in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="box">This is the contentThis is the contentThis is the contentThis is the contentThis is the
             contentThis is the contentThis is the contentThis is the contentThis is the content</div>
-        <div class="box">This is the content</div>
+        <div class="box small">This is the content</div>
 
     </div>
 
