2 headers added into #main-content in index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
         <h1>CSS For Beginners</h1>
 
+        <h2>Block Level Elements</h2>
+        <h2>Inline Elements</h2>
+
       
     </div>
 
