3 div tags and 3 span tags added in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         <h1>CSS For Beginners</h1>
 
         <h2>Block Level Elements</h2>
+        <div class="block">Block level element</div>
+        <div class="block">Block level element</div>
+        <div class="block">Block level element</div>
         <h2>Inline Elements</h2>
+        <span class="inline">Inline element</span>
+        <span class="inline">Inline element</span>
+        <span class="inline">Inline element</span>
 
       
     </div>
