Added 4 div tags into #main-content in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
     <div id="main-content">
 
         <h1>CSS For Beginners</h1>
-     
+
+        <div class="static-width">Static Pixel width</div>
+        <div class="percentage">Percentage width</div>
+        <div class="inline-block">inline block</div>
+        <div class="inline-block">inline block</div>
+   
     </div>
 
 </body>
