--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>CSS For Beginners</h1>
 
         <div class="static-width">Static Pixel width</div>
-        <div class="percentage">Percentage width</div>
+        <div class="percentage-width">Percentage width</div>
         <div class="inline-block">inline block</div>
         <div class="inline-block">inline block</div>
    
