Changed #main-content properties in <head> in index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
         #main-content {
             background: #fff;
-            width: 1200px;
+            width: 80%;
             margin: 0 auto;
+            height: 100%;
             padding: 20px;
         }
     </style>
