3 divs deleted and one div changed in #main-content in index.html

--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
 
         <h1>CSS For Beginners</h1>
 
-        <div class="static-width">Static Pixel width</div>
-        <div class="percentage-width">Percentage width</div>
-        <div class="inline-block">inline block</div>
-        <div class="inline-block">inline block</div>
+        <div class="static-width">static-width</div>
+       
    
     </div>
 
