--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <h1>CSS For Beginners</h1>
 
-        <div class="static-width">static-width</div>
+        <div id="banner"></div>
        
    
     </div>
