--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
         <h1>CSS For Beginners</h1>
 
-        <div id="banner"></div>
+        <div id="circle"></div>
+        <div id="circle-2"></div>
+        <div id="circle-3"></div>
        
    
     </div>
