Edited #main-content properties in <head> in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             width: 80%;
             margin: 0 auto;
             height: 100%;
-            padding: 20px;
+            padding: 2px;
+            position: relative;
+            min-height: 700px;
         }
     </style>
 
