Changed padding for #main-content in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             width: 80%;
             margin: 0 auto;
             height: 100%;
-            padding: 2px;
+            padding: 2%;
             position: relative;
             min-height: 700px;
         }
